--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
@@ -3,15 +3,15 @@
 	<div class="inline-block" style="width: 51%;position:relative;top:-1px;">
 		<div class="overview-events-list-container">
 			<div class="dashboard-title"><span class="selected">Nadchodzące publiczne wydarzenia</span></div>
-			<ul data-bind="foreach: $root.lobbyPage.dashboardPart.upcomingPublicEventsVM">
+			<ol data-bind="foreach: $root.lobbyPage.dashboardPart.upcomingPublicEventsVM">
 				@Html.Partial( "_EventListItem",  new ViewDataDictionary { { "page", "lobby" } } )
-			</ul>
+			</ol>
 		</div>
 		<div class="overview-events-list-container">
 			<div class="dashboard-title"><span class="selected">Najnowsze publiczne wydarzenia</span></div>
-			<ul data-bind="foreach: $root.lobbyPage.dashboardPart.recenlyAddedPublicEventsVM">
+			<ol data-bind="foreach: $root.lobbyPage.dashboardPart.recenlyAddedPublicEventsVM">
 				@Html.Partial( "_EventListItem",  new ViewDataDictionary { { "page", "lobby" } } )
-			</ul>
+			</ol>
 		</div>
 	</div>
 	<div class="inline-block" style="width: 49%; float: right; color: white;position:relative;top:-1px;">
@@ -21,23 +21,23 @@
 			<h4 style="font-weight: normal; color: #a7a2a2; padding-left: 10px;">dzisiaj</h4>
 
 
-			<ul class="dashboard-calendar-list today-dashboard-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.today">
+			<ol class="dashboard-calendar-list today-dashboard-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.today">
 				@Html.Partial( "_EventListItem",  new ViewDataDictionary { { "page", "lobby" } } )
-			</ul>
+			</ol>
 
 			<h4 style="font-weight: normal; color: #a7a2a2; padding-left: 10px;">jutro</h4>
 
 
-			<ul class="dashboard-calendar-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.tommorow">
+			<ol class="dashboard-calendar-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.tommorow">
 				@Html.Partial( "_EventListItem",  new ViewDataDictionary { { "page", "lobby" } } )
-			</ul>
+			</ol>
 
 			<h4 style="font-weight: normal; color: #a7a2a2; padding-left: 10px;">pojutrze</h4>
 
 
-			<ul class="dashboard-calendar-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.dayAfterTommorow">
+			<ol class="dashboard-calendar-list" data-bind="foreach: $root.lobbyPage.dashboardPart.myCalendarVM.dayAfterTommorow">
 				@Html.Partial( "_EventListItem",  new ViewDataDictionary { { "page", "lobby" } } )
-			</ul>
+			</ol>
 
 		</div>
 	</div>
