--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_NavPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_NavPart.cshtml
@@ -1,6 +1,9 @@
-﻿<header id="lobbyHeader">
+﻿<div style="position: fixed; right: 15%;">
+	<i class="mdi skin-brightness-icon" data-bind="click: switchDefaultTheme"></i>
+</div>
+<header id="lobbyHeader">
 	<div id="lobbyLogo">
-		<img src="~/Images/Logo/kalendarz-kariery-logo.png" alt="logo" style="position: relative; top: 1px;" />
+		<img src="~/Images/Logo/kalendarz-kariery-logo.png" alt="logo" style="position: relative; top: 2px;" />
 	</div>
 </header>
 <section id="lobbyQuoteSection">
