--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 	<link href="/Content/MaterialDesignIcons/materialdesignicons.min.css" rel="stylesheet">
 	@Styles.Render( "~/Content/css" )
 </head>
-<body class="skin-app-background">
+<body class="skin-theme-default-dark skin-app-background">
 	<div id="appContainer">
 		<div id="pageOverlayAtSiteLoad">
 			<div id="pageOverlayAtSiteLoadText">
@@ -53,7 +53,6 @@
 	<script src="~/Scripts/JSModels/KKEventDateModelObservable.js"></script>
 	<script src="~/Scripts/JSViewModels/AppViewModel.js"></script>
 
-	<script src="~/Scripts/JSUtils/SkinConfig.js"></script>
 	<script src="~/Scripts/JSUtils/EventColorHelper.js"></script>
 	<script src="~/Scripts/JSUtils/TreeBuilder.js"></script>
 	<script src="~/Scripts/JSUtils/WebApiCaller.js"></script>
