--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.EventList.cshtml
@@ -1,4 +1,4 @@
-﻿<header class="dashboard-title">
+﻿<header class="dashboard-title event-list-header">
 	<span class="display-events-header-menu-title selected hover-cursor-pointer selected">Publiczne wydarzenia</span>
 	<i class="btn-close md-icon-hover md-icon-rg mdi mdi-window-close" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick"></i>
 </header>
@@ -10,9 +10,9 @@
 		</div>
 		<span class="oldorupcoming-expand-text sm-hidden" data-bind="text: menuItems.publicEvents.showOld() == true ? '[zwiń]' : '[rozwiń]'"></span>
 	</div>
-	<ul class="event-list" data-bind="foreach: menuItems.publicEvents.selectedEvents.old">
+	<ol class="event-list" data-bind="foreach: menuItems.publicEvents.selectedEvents.old">
 		@Html.Partial( "_EventListItem", new ViewDataDictionary { { "page", "lobby" } } )
-	</ul>
+	</ol>
 	<div class="legend-oldorupcoming hover-cursor-pointer" data-bind="css: { open: menuItems.publicEvents.showUpcoming() }, click: function ()
 {
 	menuItems.publicEvents.showUpcoming(
@@ -24,8 +24,8 @@
 		</div>
 		<span class="oldorupcoming-expand-text sm-hidden" data-bind="text: menuItems.publicEvents.showUpcoming() === true ? '[zwiń]' : '[rozwiń]'"></span>
 	</div>
-	<ul class="event-list" data-bind="foreach: menuItems.publicEvents.selectedEvents.upcoming">
+	<ol class="event-list" data-bind="foreach: menuItems.publicEvents.selectedEvents.upcoming">
 		@Html.Partial( "_EventListItem", new ViewDataDictionary { { "page", "lobby" } } )
-	</ul>
+	</ol>
 </div>
 
