--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_DashboardPart.cshtml
@@ -14,7 +14,7 @@
 			</ol>
 		</div>
 	</div>
-	<div class="inline-block" style="width: 49%; float: right; color: white;position:relative;top:-1px;">
+	<div class="inline-block" style="width: 49%; float: right; position:relative;top:-1px;">
 		<div class="overview-events-list-container">
 			<div class="dashboard-title"><span class="selected">Mój kalendarz</span></div>
 
