--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventBlock.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventBlock.cshtml
@@ -19,7 +19,7 @@
 		<div data-bind="if: _isFullAddressDefined() === 'empty'">
 			<div class="rg-label">
 				<div class="inline-block width-60">gdzie:</div>
-				<span>-</span>
+				<span class="event-block-dash">-</span>
 			</div>
 		</div>
 		<div data-bind="if: _isFullAddressDefined() === 'partial'">
@@ -48,7 +48,7 @@
 		<div data-bind="if: _isFullDescriptionDefined() === 'empty'">
 			<div class="rg-label">
 				<div class="inline-block width-60">opis:</div>
-				<span>-</span>
+				<span class="event-block-dash">-</span>
 			</div>
 		</div>
 		<div data-bind="if: _isFullDescriptionDefined() === 'partial'">
