--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventListItem.cshtml
@@ -1,7 +1,7 @@
 ﻿<li>
 	<div class="event-list-item-container">
 		<div class="event-list-item" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
-			<div class="rg-label expand-label">[ZWIŃ]</div>
+			<i class="md-icon-hover md-icon-rg mdi mdi-window-minimize expand-label"></i>
 			<div class="event-list-item-left">
 				<div class="event-kind-tag inline-block" data-bind="style: { color: kind.headerColor }, text: kind.name"></div>
 				<div class="list-item-date">
