--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 	<link href="/Content/MaterialDesignIcons/materialdesignicons.min.css" rel="stylesheet">
 	@Styles.Render( "~/Content/css" )
 </head>
-<body class="skin-theme-default-dark skin-app-background">
+<body class="skin-theme-default-gray skin-app-background">
 	<div id="appContainer">
 		<div id="pageOverlayAtSiteLoad">
 			<div id="pageOverlayAtSiteLoadText">
@@ -57,6 +57,7 @@
 	<script src="~/Scripts/JSUtils/TreeBuilder.js"></script>
 	<script src="~/Scripts/JSUtils/WebApiCaller.js"></script>
 	<script src="~/Scripts/JSUtils/SimpleFilt.js"></script>
+	<script src="~/Scripts/JSUtils/NotificationUtil.js"></script>
 
 	<script src="~/Scripts/JSManagers/EventManager.js"></script>
 	<script src="~/Scripts/JSManagers/NoteManager.js"></script>
