--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/Lib/DzieuoJs/Dzieuo.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/Lib/DzieuoJs/Dzieuo.css
@@ -40,7 +40,7 @@
 		width: 10px;
 		height: 10px;
 		margin: 3px;
-		/*border: 2px solid #4C4C4C;*/
+		border: 2px solid #ADADAD;
 		display: inline-block;
 		border-radius: 10px;
 		position: relative;
@@ -61,7 +61,7 @@
 		width: 10px;
 		height: 10px;
 		margin: 4px;
-		/*border: 2px solid #4C4C4C;*/
+		border: 2px solid #ADADAD;
 		display: block;
 		border-radius: 10px;
 	}
