--- a/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
@@ -86,7 +86,7 @@
 
 .event-block-expand .event-block-name {
 	font-size: 1.8em;
-	color: rgb(72, 68, 62);
+	color: black;
 	padding: 10px;
 }
 
@@ -98,7 +98,7 @@
 
 .event-block-expand .event-block-body {
 	color: rgb(72, 68, 62);
-	padding: 10px;
+	padding: 20px;
 	padding-top: 0;
 	font-size: 1.2em;
 }
